<resources>
    <string name="app_name">Musicly Music Player</string>
    <string name="shuffle_button">Shuffle</string>
    <string name="favourites_button">Favourites</string>
    <string name="playlist_button">Playlist</string>
    <string name="total_songs">Total Songs</string>
    <string name="musicly_music_player">Musicly Music Player</string>
    <string name="song_name">Songs</string>
    <string name="back_button">Back</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading…</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equilizer_btn">Equilizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to,\nMusicly Music Player</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
</resources>