<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--For buttons-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/shuffleBtn"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/shuffle_button"
                android:drawableTop="@drawable/shuffle_icon"
                android:text="@string/shuffle_button"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:background="@android:color/transparent" />

            <Button
                android:id="@+id/favouriteBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/favourites_button"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:drawableTop="@drawable/favorite_icon"
                android:text="@string/favourites_button"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:background="@android:color/transparent"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/playlistBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/playlist_button"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:drawableTop="@drawable/playlist_icon"
                android:text="@string/playlist_button"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:background="@android:color/transparent"
                android:textAllCaps="false"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_songs"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_margin="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>